--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hola mundo aprendiendo git con BEDU
+<DOCTYPE html>
+    <html lang="es">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+
+    <body>
+        <h1>
+            Hola mundo h1
+        </h1>
+    </body>
+
+    </html>
